--- a/src/scss/front.scss
+++ b/src/scss/front.scss
@@ -10,12 +10,26 @@ button:focus{
 .rt-thepostgrid {
     position: relative;
 }
-.loader-wrapper {
+.loader-wrapper{
     position: fixed;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
     z-index: 1;
+}
+.root-loader-wrapper {
+//    z-index: 9999;
+//    &:after {
+//        content: '';
+//        position: absolute;
+//left: 0;
+//        top: 0;
+//        width: 100%;
+//        height: 100%;
+//
+//        background:
+//    rgba(0,0,0, .8);
+//    }
 }
 .loader-wrapper2 {
     position: fixed;
@@ -153,7 +167,7 @@ a, .rt-thepostgrid a{
     border-radius: 5px;
 }
 .rt-thepostgrid {
-    min-height: 80vh !important;
+    min-height: 300px ;
 }
 
 .read-more a{
@@ -287,14 +301,6 @@ a:hover {
 
 .excerpt_wrapper {
     position: relative;
-}
-
-.excerpt_wrapper .lds-ripple {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
 }
 
 .iconclass{
